crates/tmc-langs-cli/tests/snapshots/integration__checkstyle@java__ant-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: crates/tmc-langs-cli/tests/sample_exercises/java/ant-exercise
---
output-kind: output-data
status: finished
message: ran checkstyle
result: executed-command
data:
  output-data-kind: validation
  output-data:
    strategy: FAIL
    validationErrors:
      Arith.java:
        - column: 0
          line: 7
          message: "Indentation incorrect. Expected 4, but was 8."
          sourceName: com.puppycrawl.tools.checkstyle.checks.indentation.IndentationCheck

