crates/tmc-langs-cli/tests/snapshots/integration__checkstyle@java__maven-exercise-model.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/java/maven-exercise-model
---
output-kind: output-data
status: finished
message: ran checkstyle
result: executed-command
data:
  output-data-kind: validation
  output-data:
    strategy: FAIL
    validation_errors: {}
