crates/tmc-langs-cli/tests/snapshots/integration__checkstyle@java__maven-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: crates/tmc-langs-cli/tests/sample_exercises/java/maven-exercise
---
output-kind: output-data
status: finished
message: ran checkstyle
result: executed-command
data:
  output-data-kind: validation
  output-data:
    strategy: FAIL
    validationErrors:
      fi/helsinki/cs/maventest/App.java:
        - column: 0
          line: 4
          message: Indentation incorrect. Expected 4, but was 8.
          sourceName: com.puppycrawl.tools.checkstyle.checks.indentation.IndentationCheck

